--- a/Project 1 - Movies Trends.ipynb
+++ b/Project 1 - Movies Trends.ipynb
@@ -1160,9 +1160,30 @@
     " - Missing Data: Some values may be missing or incomplete, which could affect the accuracy of the analysis.\n",
     " - Correlation, Not Causation: The analysis identifies relationships between variables but does not determine cause-and-effect.\n",
     " - Dataset Scope: The findings are based on the available data and may not fully represent broader trends or unseen factors.\n",
-    " - Potential Bias: If the dataset is not representative of the entire population, the conclusions may not generalize well."
+    " - Potential Bias: If the dataset is not representative of the entire population, the conclusions may not generalize well.\n",
+    "Thank you for reading my analysis!"
    ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
