Update Project 1 - Movies Trends.ipynb

--- a/Project 1 - Movies Trends.ipynb
+++ b/Project 1 - Movies Trends.ipynb
@@ -1160,7 +1160,13 @@
     " - Missing Data: Some values may be missing or incomplete, which could affect the accuracy of the analysis.\n",
     " - Correlation, Not Causation: The analysis identifies relationships between variables but does not determine cause-and-effect.\n",
     " - Dataset Scope: The findings are based on the available data and may not fully represent broader trends or unseen factors.\n",
-    " - Potential Bias: If the dataset is not representative of the entire population, the conclusions may not generalize well.\n",
+    " - Potential Bias: If the dataset is not representative of the entire population, the conclusions may not generalize well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Thank you for reading my analysis!"
    ]
   }
