--- a/Project 3 - Communicate Data Findings/notebooks/Part_II_Slide_Deck.ipynb
+++ b/Project 3 - Communicate Data Findings/notebooks/Part_II_Slide_Deck.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "# Part II - (Presentation Title)\n",
-    "## by (your name here)"
+    "## by Jonathan Prentice"
    ]
   },
   {
