--- a/Project 3 - Communicate Data Findings/notebooks/Part_I_Exploration.ipynb
+++ b/Project 3 - Communicate Data Findings/notebooks/Part_I_Exploration.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sb\n",
-    "\n",
-    "%matplotlib inline"
+    "import seaborn as sb\n"
    ]
   },
   {
@@ -803,57 +801,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "duration_sec                  0\n",
-       "start_time                    0\n",
-       "end_time                      0\n",
-       "start_station_id            197\n",
-       "start_station_name          197\n",
-       "start_station_latitude        0\n",
-       "start_station_longitude       0\n",
-       "end_station_id              197\n",
-       "end_station_name            197\n",
-       "end_station_latitude          0\n",
-       "end_station_longitude         0\n",
-       "bike_id                       0\n",
-       "user_type                     0\n",
-       "member_birth_year          8265\n",
-       "member_gender              8265\n",
-       "bike_share_for_all_trip       0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display the number of missing values in each column\n",
-    "df.isnull().sum()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### What is the structure of your dataset?\n",
+    "The dataset contains information about individual rides made in a bike-sharing system covering the greater San Francisco Bay area. \n",
     "\n",
-    "> Your answer here!\n",
+    "It includes the following columns:\n",
+    "- `duration_sec`: Duration of the trip in seconds.\n",
+    "- `start_time`: Start time of the trip.\n",
+    "- `end_time`: End time of the trip.\n",
+    "- `start_station_id`: ID of the start station.\n",
+    "- `start_station_name`: Name of the start station.\n",
+    "- `start_station_latitude`: Latitude of the start station.\n",
+    "- `start_station_longitude`: Longitude of the start station.\n",
+    "- `end_station_id`: ID of the end station.\n",
+    "- `end_station_name`: Name of the end station.\n",
+    "- `end_station_latitude`: Latitude of the end station.\n",
+    "- `end_station_longitude`: Longitude of the end station.\n",
+    "- `bike_id`: ID of the bike.\n",
+    "- `user_type`: Type of user (Customer or Subscriber).\n",
+    "- `member_birth_year`: Birth year of the member.\n",
+    "- `member_gender`: Gender of the member.\n",
+    "- `bike_share_for_all_trip`: Whether the bike was shared for the entire trip.\n",
     "\n",
     "### What is/are the main feature(s) of interest in your dataset?\n",
+    "The main features of interest in the dataset are:\n",
     "\n",
-    "> Your answer here!\n",
+    "- `duration_sec`: To analyze the duration of bike trips.\n",
+    "- `user_type`: To understand the distribution of trips between customers and subscribers.\n",
+    "- `member_gender`: To explore any differences in trip duration and usage patterns between different genders.\n",
     "\n",
     "### What features in the dataset do you think will help support your investigation into your feature(s) of interest?\n",
     "\n",
-    "> Your answer here!"
+    "The following features will help support the investigation into the main features of interest:\n",
+    "\n",
+    "- `start_time` and `end_time`: To analyze the time of day and duration of trips.\n",
+    "- `start_station_name` and `end_station_name`: To identify popular start and end stations.\n",
+    "- `member_birth_year`: To explore the age distribution of users and its impact on trip duration.\n",
+    "- `bike_share_for_all_trip`: To understand the usage patterns of bike-sharing for entire trips.\n"
    ]
   },
   {
