--- a/Project 3 - Communicate Data Findings/notebooks/Part_I_Exploration.ipynb
+++ b/Project 3 - Communicate Data Findings/notebooks/Part_I_Exploration.ipynb
@@ -4,21 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part I - Dataset Exploration\n",
+    "# Part I - Dataset Exploration - Ford GoBike System Data\n",
     "## by Jonathan Prentice\n",
     "\n",
     "## Introduction\n",
-    "> Introduce the dataset\n",
+    "This project explores the Ford GoBike System Data, which includes information about individual rides made in a bike-sharing system covering the greater San Francisco Bay area. The dataset contains details such as trip duration, start and end times, start and end station locations, bike ID, user type, and user demographics. The main goal of this project is to analyze and visualize the data to uncover insights and trends related to bike usage patterns, user demographics, and trip characteristics. \n",
+    "The analysis is divided into two parts: exploratory data visualization and explanatory data visualization. \n",
     "\n",
-    ">**Rubric Tip**: Your code should not generate any errors, and should use functions, loops where possible to reduce repetitive code. Prefer to use functions to reuse code statements.\n",
-    "\n",
-    "> **Rubric Tip**: Document your approach and findings in markdown cells. Use comments and docstrings in code cells to document the code functionality.\n",
-    "\n",
-    ">**Rubric Tip**: Markup cells should have headers and text that organize your thoughts, findings, and what you plan on investigating next.  \n",
-    "\n",
-    "\n",
-    "\n",
-    "## Preliminary Wrangling\n"
+    "- In the exploratory phase, we will systematically explore the dataset using various visualization techniques to understand data distributions and relationships. \n",
+    "- In the explanatory phase, we will refine and design clear, polished visualizations to effectively communicate key findings from the dataset."
    ]
   },
   {
@@ -38,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Load in your dataset and describe its properties through the questions below. Try and motivate your exploration goals through this section.\n"
+    "## Preliminary Wrangling"
    ]
   },
   {
