Refine questions in Part I Exploration notebook for clarity and detail

--- a/Project 3 - Communicate Data Findings/notebooks/Part_I_Exploration.ipynb
+++ b/Project 3 - Communicate Data Findings/notebooks/Part_I_Exploration.ipynb
@@ -806,10 +806,10 @@
    "source": [
     "### Discuss the distributions of variables of interest. Were there any unusual points? Did you need to perform any transformations?\n",
     "\n",
-    "Question 1\n",
+    "Question 1 - What is the distribution of trip durations?\n",
     "- The distribution of trip durations is right-skewed, with most trips lasting less than 2000 seconds (approximately 33 minutes). There are some outliers with very long trip durations, which may need further investigation to determine if they are valid data points or errors.\n",
     "\n",
-    "Question 2\n",
+    "Question 2 - \n",
     "- The distribution of user types shows that the majority of bike trips are taken by subscribers rather than customers. This indicates that the bike-sharing system is more popular among regular users.\n",
     "\n",
     "Question 3\n",
