Add Ford GoBike dataset and initial analysis scripts; remove old analysis files

--- a/Project 2 - Data Wrangling/Project_2_NHL_Draft_Analysis.ipynb
+++ b/Project 2 - Data Wrangling/Project_2_NHL_Draft_Analysis.ipynb
@@ -6,7 +6,8 @@
     "id": "GNIwe5N7s0e_"
    },
    "source": [
-    "# Real-world Data Wrangling"
+    "# Analyzing NHL Draft Trends: Socioeconomic Factors and Player Success\n",
+    "## by Jonathan Prentice"
    ]
   },
   {
