--- a/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
+++ b/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
@@ -11,7 +11,8 @@
     "This project explores the Ford GoBike System Data, which includes information about individual rides made in a bike-sharing system covering the greater San Francisco Bay area. The dataset contains details such as trip duration, start and end times, start and end station locations, bike ID, user type, and user demographics. The main goal of this project is to analyze and visualize the data to uncover insights and trends related to bike usage patterns, user demographics, and trip characteristics. \n",
     "The analysis is divided into two parts: exploratory data visualization and explanatory data visualization. \n",
     "\n",
-    "- In the exploratory phase, we will systematically explore the dataset using various visualization techniques to understand data distributions and relationships. \n",
+    "- In the exploratory phase, we will systematically explore the dataset using various visualization techniques to understand data distributions and relationships. Then clean or tidy up based what we find.\n",
+    "\n",
     "- In the explanatory phase, we will refine and design clear, polished visualizations to effectively communicate key findings from the dataset."
    ]
   },
