Refactor notebook sections and update execution counts for Ford GoBike analysis

--- a/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
+++ b/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
@@ -13,12 +13,19 @@
     "\n",
     "- In the exploratory phase, we will systematically explore the dataset using various visualization techniques to understand data distributions and relationships. Then clean or tidy up based what we find.\n",
     "\n",
-    "- In the explanatory phase, we will refine and design clear, polished visualizations to effectively communicate key findings from the dataset."
+    "- In the explanatory phase, we will refine and design clear, polished visualizations to effectively communicate key findings from the dataset.# 1. Gather data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Gather data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +40,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preliminary Wrangling"
+    "# 2. Preliminary Wrangling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +139,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "3bfa079c-e5dc-4f26-8232-3420450f39cb",
+       "ref": "a28e866e-ea93-4270-9168-3df7f8b372ce",
        "rows": [
         [
          "0",
@@ -416,14 +423,14 @@
        "4          Male                     Yes  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the dataset\n",
-    "df = pd.read_csv('/Users/Miles/Public App Files/Udacity-Data-Analyst-Nanodegree/Project 3 - Communicate Data Findings/data/201902-fordgobike-tripdata.csv')\n",
+    "df = pd.read_csv('/Users/Miles/Public App Files/Udacity-Data-Analyst-Nanodegree/Project 3 - Ford GoBike Analysis/data/201902-fordgobike-tripdata.csv')\n",
     "\n",
     "# Display the first few rows of the dataframe\n",
     "df.head()"
@@ -431,7 +438,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Display summary statistics for numerical columns\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values:\n",
+      " duration_sec                  0\n",
+      "start_time                    0\n",
+      "end_time                      0\n",
+      "start_station_id            197\n",
+      "start_station_name          197\n",
+      "start_station_latitude        0\n",
+      "start_station_longitude       0\n",
+      "end_station_id              197\n",
+      "end_station_name            197\n",
+      "end_station_latitude          0\n",
+      "end_station_longitude         0\n",
+      "bike_id                       0\n",
+      "user_type                     0\n",
+      "member_birth_year          8265\n",
+      "member_gender              8265\n",
+      "bike_share_for_all_trip       0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for missing values in the dataset\n",
+    "missing_values = df.isnull().sum()\n",
+    "print(\"Missing values:\\n\", missing_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate rows: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for duplicate rows\n",
+    "duplicate_rows = df.duplicated().sum()\n",
+    "print(\"Number of duplicate rows:\", duplicate_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique values in user_type:\n",
+      " ['Customer' 'Subscriber']\n",
+      "Unique values in member_gender:\n",
+      " ['Male' nan 'Other' 'Female']\n",
+      "Unique values in bike_share_for_all_trip:\n",
+      " ['No' 'Yes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display unique values in categorical columns\n",
+    "categorical_columns = ['user_type', 'member_gender', 'bike_share_for_all_trip']\n",
+    "for col in categorical_columns:\n",
+    "    print(f\"Unique values in {col}:\\n\", df[col].unique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +546,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,25 +558,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(183412, 16)"
+       "(182784, 17)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display the number of rows and columns in the dataframe\n",
+    "df.shape                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "duration_sec                 int64\n",
+       "start_time                  object\n",
+       "end_time                    object\n",
+       "start_station_id           float64\n",
+       "start_station_name          object\n",
+       "start_station_latitude     float64\n",
+       "start_station_longitude    float64\n",
+       "end_station_id             float64\n",
+       "end_station_name            object\n",
+       "end_station_latitude       float64\n",
+       "end_station_longitude      float64\n",
+       "bike_id                      int64\n",
+       "user_type                   object\n",
+       "member_birth_year          float64\n",
+       "member_gender               object\n",
+       "bike_share_for_all_trip     object\n",
+       "start_hour                   int32\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the data types of the columns\n",
-    "df.dtypes\n",
-    "# Display the number of rows and columns in the dataframe\n",
-    "df.shape                "
+    "df.dtypes"
    ]
   },
   {
@@ -486,10 +623,10 @@
     "The dataset contains information about individual rides made in a bike-sharing system covering the greater San Francisco Bay area. \n",
     "\n",
     "It includes the following columns:\n",
-    "- `duration_sec`: Duration of the trip in seconds.\n",
+    "- `duration_sec`: Duration of the trip in seconds.  (int64): Correct, as it represents the duration of a trip in seconds, which should be an integer.\n",
     "- `start_time`: Start time of the trip.\n",
-    "- `end_time`: End time of the trip.\n",
-    "- `start_station_id`: ID of the start station.\n",
+    "- `end_time`: End time of the trip.  - These should ideally be converted to datetime for easier manipulation and analysis of time-based data.\n",
+    "- `start_station_id`: ID of the start station. \n",
     "- `start_station_name`: Name of the start station.\n",
     "- `start_station_latitude`: Latitude of the start station.\n",
     "- `start_station_longitude`: Longitude of the start station.\n",
@@ -532,7 +669,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Univariate Exploration\n",
+    "# 3. Univariate Exploration\n",
     "\n",
     "- In this section, we will investigate distributions of individual variables. Looking for unusual points or outliers, taking a deeper look to clean things up\n",
     "and prepare to look at relationships between variables."
@@ -554,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +979,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bivariate Exploration\n",
+    "# 4. Bivariate Exploration\n",
     "- Let's proceed with the bivariate exploration by investigating relationships between pairs of variables. \n",
     "- We'll follow the \"Question-Visualization-Observations\" framework for each pair of variables."
    ]
@@ -856,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multivariate Exploration\n",
+    "# 5. Multivariate Exploration\n",
     "\n",
     "> Create plots of three or more variables to investigate your data even\n",
     "further. Make sure that your investigations are justified, and follow from\n",
@@ -1177,7 +1314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusions\n",
+    "# 6. Conclusions\n",
     ">You can write a summary of the main findings and reflect on the steps taken during the data exploration.\n"
    ]
   },
