Enhance dataset documentation in Part I Exploration notebook for Ford GoBike analysis

--- a/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
+++ b/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
@@ -623,18 +623,24 @@
     "The dataset contains information about individual rides made in a bike-sharing system covering the greater San Francisco Bay area. \n",
     "\n",
     "It includes the following columns:\n",
+    "Bike / Session Info:\n",
+    "- `bike_id`: ID of the bike.\n",
     "- `duration_sec`: Duration of the trip in seconds.  (int64): Correct, as it represents the duration of a trip in seconds, which should be an integer.\n",
     "- `start_time`: Start time of the trip.\n",
     "- `end_time`: End time of the trip.  - These should ideally be converted to datetime for easier manipulation and analysis of time-based data.\n",
+    "\n",
     "- `start_station_id`: ID of the start station. \n",
-    "- `start_station_name`: Name of the start station.\n",
-    "- `start_station_latitude`: Latitude of the start station.\n",
-    "- `start_station_longitude`: Longitude of the start station.\n",
     "- `end_station_id`: ID of the end station.\n",
+    "\n",
+    "- `start_station_name`: Name of the start station.\n",
     "- `end_station_name`: Name of the end station.\n",
+    "\n",
+    "- `start_station_latitude`(float64):Latitude of the start station. :Correct, as latitude and longitude are\n",
+    "- `start_station_longitude`: Longitude of the start station.\n",
     "- `end_station_latitude`: Latitude of the end station.\n",
     "- `end_station_longitude`: Longitude of the end station.\n",
-    "- `bike_id`: ID of the bike.\n",
+    "\n",
+    "User Info: \n",
     "- `user_type`: Type of user (Customer or Subscriber).\n",
     "- `member_birth_year`: Birth year of the member.\n",
     "- `member_gender`: Gender of the member.\n",
@@ -645,7 +651,9 @@
     "The main features of interest in the dataset are:\n",
     "- `duration_sec`: To analyze the duration of bike trips.\n",
     "- `user_type`: To understand the distribution of trips between customers and subscribers.\n",
-    "- `member_gender`: To explore any differences in trip duration and usage patterns between different genders.\n",
+    "- `member_birth_year`: To analyze the age distribution of users and its potential impact on trip duration and user behavior.\n",
+    "- `start_time` and `end_time`: Start and end times of the trip, which can be converted to datetime format for easier manipulation and analysis of time-based data.\n",
+    "\n",
     "\n",
     "### What features in the dataset do you think will help support your investigation into your feature(s) of interest?\n",
     "\n",
