Add author name to the introduction section of the Movies Trends notebook

--- a/Project 1 - Investigate a Dataset/Project 1 - Movies Trends.ipynb
+++ b/Project 1 - Investigate a Dataset/Project 1 - Movies Trends.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Project: Investigate a Dataset - TMDb Movie Data\n",
-    "\n",
+    "## by Jonathan Prentice\n",
     "## Table of Contents\n",
     "<ul>\n",
     "<li><a href=\"#intro\">Introduction</a></li>\n",
