Update execution counts and clean up code cells in Part I Exploration notebook

--- a/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
+++ b/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,17 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "df = pd.read_csv('/Users/Miles/Public App Files/Udacity-Data-Analyst-Nanodegree/Project 3 - Ford GoBike Analysis/data/201902-fordgobike-tripdata.csv')"
+    "df = pd.read_csv('/Users/Miles/Public App Files/Udacity-Data-Analyst-Nanodegree/Project 3 - Ford GoBike Analysis/data/201902-fordgobike-tripdata.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e16f4af1-d1b9-4705-a399-e9ce466d40a8",
+       "ref": "3ed1d31d-f38f-4be8-8840-7433b6a62792",
        "rows": [
         [
          "0",
@@ -433,7 +433,7 @@
        "4          Male                     Yes  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -497,18 +497,13 @@
     }
    ],
    "source": [
-    "\n",
     "# Display summary statistics for numerical columns\n",
-    "df.info()\n",
-    "\n",
-    "# Check for missing values in the dataset\n",
-    "missing_values = df.isnull().sum()\n",
-    "print(\"Missing values:\\n\", missing_values)"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -678,30 +673,36 @@
     "The dataset contains information about individual rides made in a bike-sharing system covering the greater San Francisco Bay area. \n",
     "It includes the following columns:\n",
     "\n",
-    "Bike / Session Info:\n",
+    "**Bike / Session Info:**\n",
     "- `bike_id`(int64): ID of the bike. **Correct Datatype**, as bike IDs are unique integers.\n",
     "- `duration_sec` (int64): **Correct Datatype**, as it represents the duration of a trip in seconds, which should be an integer.\n",
     "- `start_hour` (int32): **Correct Datatype**, as it represents an hour of the day, which is an integer.\n",
     "\n",
-    "- `start_time`(object): Start time of the trip.\n",
-    "- `end_time`(object): End time of the trip. \n",
-    "These should ideally be converted to datetime for easier manipulation and analysis of time-based data.**\n",
+    "- `start_time`(object): Start time of the trip. **No Missing Values**\n",
+    "- `end_time`(object): End time of the trip.  **No Missing Values**\n",
+    "**Datatype Issues** These should ideally be converted to datetime for easier manipulation and analysis of time-based data.\n",
+    "**No Missing Values**\n",
     "\n",
     "- `start_station_id`: ID of the start station. \n",
     "- `end_station_id`: ID of the end station.\n",
-    "If station IDs are numeric but have missing values, float64 is fine. However, there are 197 missing values, they should be int64.\n",
+    "**Datatype Issues** If station IDs are numeric but have missing values. However, there are 197 missing values, they should be int64.\n",
+    "**No Missing Values**\n",
     "\n",
     "- `start_station_name` (object): Name of the start station. \n",
     "- `end_station_name` (object): Name of the end station. \n",
     "**Correct Datatypes**, as these are string values.\n",
+    "**No Missing Values**\n",
     "\n",
     "- `start_station_latitude` (float64): Latitude of the start station.\n",
     "- `start_station_longitude` (float64): Longitude of the start station.\n",
     "**Correct Datatypes**, as latitude and longitude are typically stored as floating-point numbers.\n",
+    "**No Missing Values**\n",
     "\n",
     "- `end_station_latitude` (float64): Latitude of the end station.\n",
     "- `end_station_longitude` (float64): Longitude of the end station.\n",
     "**Correct Datatypes**, for geographic coordinates. \n",
+    "**No Missing Values**\n",
+    "\n",
     "\n",
     "**User Info:**\n",
     "- `user_type` (object): Type of user. \n",
@@ -710,14 +711,32 @@
     "- `member_birth_year` (float64): Birth year of the member.\n",
     "There no missing values, it should be int64.\n",
     "\n",
-    "- `member_gender` (object): Gender of the member.\n",
-    "**Correct Datatype**, as this is a categorical variable (e.g., \"Male\", \"Female\", or \"Other\").\n",
     "\n",
     "- `bike_share_for_all_trip` (object): Whether the bike was shared for the entire trip.\n",
     "**Correct Datatype**, as this is a categorical variable (e.g., \"Yes\" or \"No\").\n",
     "\n",
+    "- `member_gender` (object): Gender of the member. There are 8265 missing values.\n",
+    "**Correct Datatype**, as this is a categorical variable (e.g., \"Male\", \"Female\", or \"Other\").\n",
     "\n",
-    "Issues to address: \n",
+    "Missing values:\n",
+    " duration_sec                  0\n",
+    "start_time                    0\n",
+    "end_time                      0\n",
+    "start_station_id            197\n",
+    "start_station_name          197\n",
+    "start_station_latitude        0\n",
+    "start_station_longitude       0\n",
+    "end_station_id              197\n",
+    "end_station_name            197\n",
+    "end_station_latitude          0\n",
+    "end_station_longitude         0\n",
+    "bike_id                       0\n",
+    "user_type                     0\n",
+    "member_birth_year          8265\n",
+    "member_gender              8265\n",
+    "bike_share_for_all_trip       0\n",
+    "\n",
+    "**Issues to address:**\n",
     "\n",
     "These should ideally be converted to datetime for easier manipulation and analysis of time-based data.**\n",
     "- `start_time`(object): Start time of the trip.\n",
@@ -727,8 +746,9 @@
     "- `start_station_id`: ID of the start station. \n",
     "- `end_station_id`: ID of the end station.\n",
     "\n",
-    "- `member_birth_year` (float64): Birth year of the member.\n",
-    "There no missing values, it should be int64.\n"
+    "- `member_birth_year` (float64): Birth year of the member. There are 8265 missing values.\n",
+    "\n",
+    "- `member_gender` There are 8265 missing values. "
    ]
   },
   {
@@ -761,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +891,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "38f40b6d-50fb-4068-aaf0-3210e5254ab9",
+       "ref": "868e087a-c1bc-4fa3-a62e-05a6c473d82b",
        "rows": [
         [
          "0",
@@ -1166,7 +1186,7 @@
        "4          Male                     Yes     26.416667  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
