--- a/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
+++ b/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
@@ -45,12 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load the dataset\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/Miles/Public App Files/Udacity-Data-Analyst-Nanodegree/Project 3 - Ford GoBike Analysis/data/201902-fordgobike-tripdata.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Load the dataset\n",
-    "df = pd.read_csv('/Users/Miles/Public App Files/Udacity-Data-Analyst-Nanodegree/Project 3 - Ford GoBike Analysis/data/201902-fordgobike-tripdata.csv')\n"
+    "df = pd.read_csv('/Users/Miles/Public App Files/Udacity-Data-Analyst-Nanodegree/Project 3 - Ford GoBike Analysis/data/201902-fordgobike-tripdata.csv')"
    ]
   },
   {
@@ -761,7 +773,6 @@
     "- `user_type`: To understand the distribution of trips between customers and subscribers.\n",
     "- `member_birth_year`: To analyze the age distribution of users and its potential impact on trip duration and user behavior.\n",
     "- `start_time` and `end_time`: Start and end times of the trip, which can be converted to datetime format for easier manipulation and analysis of time-based data.\n",
-    "\n",
     "\n",
     "### What features in the dataset do you think will help support your investigation into your feature(s) of interest?\n",
     "\n",
