Enhance emphasis on datatype issues in Part I Exploration notebook

--- a/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
+++ b/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
@@ -692,7 +692,7 @@
     "\n",
     "- `start_time`(object): Start time of the trip. **No Missing Values**\n",
     "- `end_time`(object): End time of the trip.  **No Missing Values**\n",
-    "**Datatype Issues** These should ideally be converted to datetime for easier manipulation and analysis of time-based data.\n",
+    "**Datatype Issues** **These should ideally be converted to datetime for easier manipulation and analysis of time-based data.**\n",
     "**No Missing Values**\n",
     "\n",
     "- `start_station_id`: ID of the start station. \n",
