Add age calculation for known birth years and update member_birth_year handling in Part I Exploration notebook

--- a/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
+++ b/Project 3 - Ford GoBike Analysis/notebooks/Part_I_Exploration.ipynb
@@ -816,6 +816,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate age only for known birth years\n",
+    "df['age'] = pd.to_numeric(df['member_birth_year'], errors='coerce')\n",
+    "df['age'] = 2023 - df['age']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -824,7 +835,8 @@
     "\n",
     "- `start_station_id`\n",
     "- `end_station_id`\n",
-    "- `member_birth_year` \n",
+    "- `member_birth_year` had missing member_birth_year. These were categorized as ‘Unknown’ for categorical summaries and excluded from age-based visualizations.\n",
+    "\n",
     "- `member_gender` \n",
     "\n",
     "\n",
@@ -849,17 +861,6 @@
     "\n",
     "# Convert the 'duration_sec' column from seconds to minutes and add it to the dataframe\n",
     "df['duration_min'] = df['duration_sec'].apply(convert_sec_to_min)               "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate age only for known birth years\n",
-    "df['age'] = pd.to_numeric(df['member_birth_year'], errors='coerce')\n",
-    "df['age'] = 2023 - df['age']"
    ]
   },
   {
